[package]
name = "icao-units"
version = "0.1.0"
authors = ["Ken Barker <ken.barker@via-technology.aero>"]
description = "Units for air navigation as defined in ICAO Annex 5."
readme = "README.md"
license = "MIT"
edition = "2021"
publish = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
