[package]
name = "icao-units"
version = "1.1.2"
authors = ["Ken Barker <ken.barker@via-technology.aero>"]
description = "Units for air navigation as defined in ICAO Annex 5."
documentation = "https://docs.rs/icao-units/"
homepage = "https://github.com/kenba/icao-units-rs"
repository = "https://github.com/kenba/icao-units-rs"
readme = "README.md"
keywords = ["icao", "units", "si", "conversion"]
categories = ["aerospace", "no-std"]
license = "MIT"
edition = "2024"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
